--- a/info/TODO.org
+++ b/info/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-04-01>
+#+DATE: Time-stamp: <2020-04-02>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -15,36 +15,34 @@
 #+STARTUP: showall
 
 # #+title: The TODO file of APDL-Mode
-     # (defconst superfrobnicator-base (file-name-directory load-file-name))
 
-     # (defun superfrobnicator-fetch-image (file)
-     #   (expand-file-name file superfrobnicator-base))
 * TODO Version 20.5.0
 ** Todos, bugs
 *** State of documentation
-     - work on the Info index
-     - image directory in .info file is not existing in Melpa! Do we
-       need images in the manual? No
-     - #+include: #+title adds to info title!
-     - Attention ":" in headline gives a texinfo reference!
-     - C-u info file
-     - package with file "dir"
-     - only up to 3 *** levels! configurable?
-     - info doesn't know about clickable function links
-     - info doesn't have links, yet
-       - (describe-package 'helpful)
-         [1]  https://github.com/wilfred/helpful
-	 > Similarly, help-fns+.el.
-         > There you have option `help-cross-reference-manuals':
-     - customise system (explain `M-x customize-set-value' as long as
-       (debbugs-gnu-bugs 25678) is not solved)
-     - license status buffers in docu
-     - add intro to the wb-template system
-     - explain interactive browsing of keywords => menu entry
+    - intro presentation
+    - work on the Info index
+    - image directory in .info file is not existing in Melpa! Do we
+      need images in the manual? No
+    - #+include: #+title adds to info title!
+    - Attention ":" in headline gives a texinfo reference!
+    - C-u info file
+    - package with file "dir"
+    - only up to 3 *** levels! configurable?
+    - info doesn't know about clickable function links
+    - info doesn't have links, yet
+      - (describe-package 'helpful)
+	[1]  https://github.com/wilfred/helpful
+	> Similarly, help-fns+.el.
+	> There you have option `help-cross-reference-manuals':
+    - customise system (explain `M-x customize-set-value' as long as
+      (debbugs-gnu-bugs 25678) is not solved)
+    - license status buffers in docu
+    - add intro to the wb-template system
+    - explain interactive browsing of keywords => menu entry
 
     - Presentations
       - Präsentation Intro, tutorial
-      - in-dept present.
+      - in-dept presentation
       - APDL reference => just Info?
 ** minor bugs
    - fmagsum in -template-post1 not fontified
@@ -72,7 +70,8 @@
        interpreter or Ansys Classics GUI
     6) Melpa README, better wait till emacs-27
 ** Done
-** Release proceedures
+** Push and Release Proceedures
+   - make PACK for any push!
 
    - NEWS.org
    - README.org News
@@ -80,7 +79,7 @@
    - make PACK!
 
    gca = git commit -a = gau + gc
-   gta = git tag -a 20.5.0
+   gta = git tag -a 20.6.0
    g push --tags
 
    Ansys update:
