Put FMAGSUM into undocumented commands

--- a/info/TODO.org
+++ b/info/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-04-03>
+#+DATE: Time-stamp: <2020-04-04>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -18,8 +18,7 @@
 
 * TODO Version 20.5.0
 ** Todos, bugs
-   - autoloading of most functions not working without calling
-     initialise!
+   - EWW not working with remote ssh -help-path
 *** State of documentation
     - intro presentation
     - work on the Info index
@@ -47,14 +46,10 @@
       - in-dept presentation
       - APDL reference => just Info?
 ** minor bugs
-   - fmagsum in -template-post1 not fontified
    - C-u C-c C-b in browser on Win10 for "All"stuff isn't skipping to
-     the respective page section on Chrome and Edge!?
+     the respective section on page for Chrome and Edge!?
    - 1/en, en is variable but fraction not fontified?
 ** check
-   - apdl-start-ansys (make-comint) - doesn't start the launcher under
-     windows, but is redundant with -start-classics
-   - apdl-start-classics (start-process)
    - changed file size without warning to 30 MB what is Emacs-26
      using?
 ** wishes
@@ -65,15 +60,16 @@
       include ARG[1-9] optionally?
 *** misc
     1) derive A-M from prog-modes => branch derived
-    2) Travis CI continuous integration!
-    3) https://github.com/marketplace/coveralls
-    4) Start optionally runbWB2 --aim, Discovery AIM
-    5) Ansys is often used synonymous for Ansys MAPDL solver /
+    2) More subjects in -browse-apdl-help for example /post26, etc.
+    3) Travis CI continuous integration!
+    4) https://github.com/marketplace/coveralls
+    5) Start optionally runbWB2 --aim, Discovery AIM
+    6) Ansys is often used synonymous for Ansys MAPDL solver /
        interpreter or Ansys Classics GUI
-    6) Melpa README, better wait till emacs-27
+    7) Melpa README, better wait till emacs-27..
 ** Done
 ** Push and Release Proceedures
-   - make PACK for any push!
+   - make PACK now obligatory for any push!
 
    - NEWS.org
    - README.org News
