Remove bug in wb template

--- a/info/TODO.org
+++ b/info/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-04-04>
+#+DATE: Time-stamp: <2020-04-05>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -18,7 +18,6 @@
 
 * TODO Version 20.5.0
 ** Todos, bugs
-   - EWW not working with remote ssh -help-path
 *** State of documentation
     - intro presentation
     - work on the Info index
@@ -50,6 +49,8 @@
      the respective section on page for Chrome and Edge!?
    - 1/en, en is variable but fraction not fontified?
 ** check
+   - EWW bug: not working with remote ssh -help-path
+     (debbugs-gnu-bugs 40425)
    - changed file size without warning to 30 MB what is Emacs-26
      using?
 ** wishes
@@ -59,14 +60,16 @@
     - what is the advantage of ARG1-9? => parameter system, should I
       include ARG[1-9] optionally?
 *** misc
-    1) derive A-M from prog-modes => branch derived
+    1) functions like NDNEXT is completed but not possible to search
+       in C-c C-b or M-? => function template or special section?
     2) More subjects in -browse-apdl-help for example /post26, etc.
-    3) Travis CI continuous integration!
-    4) https://github.com/marketplace/coveralls
-    5) Start optionally runbWB2 --aim, Discovery AIM
-    6) Ansys is often used synonymous for Ansys MAPDL solver /
+    3) derive A-M from prog-modes => branch derived
+    4) Travis CI continuous integration!
+    5) https://github.com/marketplace/coveralls
+    6) Start optionally runbWB2 --aim, Discovery AIM
+    7) Ansys is often used synonymous for Ansys MAPDL solver /
        interpreter or Ansys Classics GUI
-    7) Melpa README, better wait till emacs-27..
+    8) Melpa README, better wait till emacs-27..
 ** Done
 ** Push and Release Proceedures
    - make PACK now obligatory for any push!
