--- a/doc/A-M_APDL_reference.org
+++ b/doc/A-M_APDL_reference.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-04-01>
+#+DATE: Time-stamp: <2020-04-06>
 #+bind: org-html-preamble-format (("en" "%d"))
 # #+TITLE:  APDL-Mode Highlighting and APDL Reference
 # #####################################################################
@@ -219,12 +219,12 @@ eblock,10,,,94
 * APDL Reference
 ** Idiosyncrasies
   - You can only store character variables of 8 characters, strings of
-    32 characters and for *only* 248 characters you need to create a
-    string array!
-  - No function definitions <- write `command' files (suffix: .mac),
-    or call a macro (arbitrary suffix) with `*use', something close is
-    to fill a "table" arry, interpolating values and possible real
-    indexing A(0.3).
+    32 characters and for a maximum of 248 characters you need to
+    create a string array!
+  - No proper function definitions <- write `command' files (suffix:
+    .mac), or call a macro (arbitrary suffix) with `*use', something
+    close is to fill a "table" arry, interpolating values and possible
+    real indexing A(0.3).
   - you can get table array values with real index values but must use
     integers for assigning them the values, the same goes for *vplot:
     it needs the arry indices in integers and is, moreover, only
@@ -236,16 +236,19 @@ eblock,10,,,94
   - *vwread does not work with C format specifiers in contrast to *vwrite
   - Still (v15) no *round* function in sight, but someting like
     nint(max*1e3)/1e3 might do
-  - One cannot easily get the variable value, either one must assign
+  - One cannot directly get the variable value, either one must assign
     the variable to another one, or use the `*stat' command
   - Operators > and <: 1 < 2 = 1; 2 < 1 = 1; 2 > 1 = 2 :TODO check
   - Inconsistent naming: /{x,y}range but /axlab,{x,y},
+  - Inconsistent comma usage: /com and c*** are working with and
+    without a subsequent comma (/com without a comma is eating one
+    character)
   - The /contour command does not work on device /show,PNG
-  - DELETION OF ARRY parameters without warning only possible with an
+  - Deletion of arry parameters without warning only possible with an
     undocumented option: *del,Array,,nopr
-  - *cfwrite does parameter substituion without %%: *cfwrite, X_points
+  - *cfwrite does parameter substitution without %%: *cfwrite, X_points
     = NoN,*cfwrite, the same as X_points = %NoN%????
-  - No direct operation on arrays like A=A*3, take a detour with
+  - No direct operation on arrays like A=A*3, takes a detour with
     *voper or *toper
   - Load symbol vectors /pbc,all,,1 in /prep7 are uniform in
     contrast to the more ralistic ones in /solu
