--- a/info/usage.org
+++ b/info/usage.org
@@ -245,15 +245,14 @@ documentation in a browser.
 * Abbreviation Facility
   for block templates.
 
-  E.g. typing "‘do" (the backquote ’‘’ then ’do’) and the space
-  key <SPC> under APDL-Mode triggers an interactive code template
-  which inserts a *DO loop (‘apdl-do’).  "‘d" (then <SPC>) is a
-  more immediate version of it without requesting user
-  input (‘ansys_do’).  You can see all the predefined abbreviations
-  with "‘?", i. e. a question mark ’?’  after the backquote ’‘’.
-  Alternatively you might use the menu entry or the command ‘M-x
-  ‘list-abbrevs’ <RET>’ to inspect all definitions which Emacs
-  knows.
+  E.g. typing "‘do" (the backquote ’‘’ then ’do’) and the space key
+  <SPC> under APDL-Mode triggers an interactive code template which
+  inserts a *DO loop (‘apdl-do’).  "‘d" (then <SPC>) is a more
+  immediate version of it without requesting user input (‘ansys_do’).
+  You can see all the predefined abbreviations with "‘?", i. e. a
+  question mark ’?’  after the backquote ’‘’.  Alternatively you might
+  use the menu entry "List Mode Abbbreviations" or the command ‘M-x
+  ‘list-abbrevs’ <RET>’ to inspect all definitions which are defined.
 
 * Outlining
   (hiding and expanding) code sections.
