Improve template system documentation
Reintroduce the `p abbreviation.

--- a/info/TODO.org
+++ b/info/TODO.org
@@ -14,47 +14,58 @@
 #+LATEX_HEADER:
 #+STARTUP: showall
 
+# title problematic for Info
 # #+title: The TODO file of APDL-Mode
 
 * TODO Version 20.5.0
 ** Todos, bugs
-*** State of documentation
-    - intro presentation
-    - work on the Info index
-    - how can user extend the mode abbrevs? => usage.org
-    - image directory in .info file is not existing in Melpa! Do we
-      need images in the manual? No
-    - #+include: #+title adds to info title!
-    - Attention ":" in headline gives a texinfo reference!
-    - C-u info file
-    - package with file "dir"
-    - only up to 3 *** levels! configurable?
-    - info doesn't know about clickable function links
-    - info doesn't have links, yet
-      - (describe-package 'helpful)
-	[1]  https://github.com/wilfred/helpful
-	> Similarly, help-fns+.el.
-	> There you have option `help-cross-reference-manuals':
-    - customise system (explain `M-x customize-set-value' as long as
-      (debbugs-gnu-bugs 25678) is not solved)
-    - license status buffers in docu
-    - add intro help to the wb-template system
-    - explain interactive browsing of keywords => menu entry
+   - colleagues? -> Update intro presentation
+   - wb templates
+   - improve docu -> C-c C-b (get) functions
 
-    - Presentations
-      - Präsentation Intro, tutorial
-      - in-dept presentation
-      - APDL reference => just Info?
-** minor bugs
+** State of documentation
+   1) functions - like NDNEXT - is completed but not possible to
+      search in C-c C-b or M-? => function template or special
+      section?
+   2) More subjects in -browse-apdl-help for example /post26, (get-)
+      functions, etc.
+   3) Highlight WB code examples in A-M in README.org
+   4) intro presentation
+   5) how can user extend the mode abbrevs? => usage.org
+   6) add intro help to the wb-template system
+   7) explain interactive browsing of keywords => usage.org (+ menu entry)
+   8) license status buffers in docu?
+   9) customise system (explain `M-x customize-set-value' as long as
+     (debbugs-gnu-bugs 25678) is not solved)?
+*** Info
+   - work on the Info index
+   - image directory in .info file is not existing in Melpa! Do we
+     need images in the manual? No
+   - #+include: #+title adds to info title!
+   - Attention colon ":" in headline gives a texinfo reference!
+   - C-u info file
+   - package with file "dir"
+   - only up to 3 *** levels! configurable?
+   - info doesn't know about clickable function links yet
+   - info doesn't have links, yet
+     - (describe-package 'helpful)
+       [1]  https://github.com/wilfred/helpful
+       > Similarly, help-fns+.el.
+       > There you have option `help-cross-reference-manuals':
+*** Presentations
+     - update intro, tutorial
+     - in-depth presentation, tuturial?
+     - APDL reference => just Info?
+** Minor bugs
    - C-u C-c C-b in browser on Win10 for "All"stuff isn't skipping to
      the respective section on page for Chrome and Edge!?
    - 1/en, en is variable but fraction not fontified?
-** check
+** Check
    - EWW bug: not working with remote ssh -help-path
      (debbugs-gnu-bugs 40425)
    - changed file size without warning to 30 MB what is Emacs-26
      using?
-** wishes
+** Wishes
 *** templates
     - Add more WorkBench/ Discovery AIM templates
     - Intelligent template selector with keywords in the line of helm
@@ -62,38 +73,30 @@
     - What is the advantage of ARG1-9? => parameter system, should I
       include ARG[1-9] optionally?
 *** misc
-    1) functions - like NDNEXT - is completed but not possible to
-       search in C-c C-b or M-? => function template or special
-       section?
-       - post26
-    2) More subjects in -browse-apdl-help for example /post26, etc.
-    3) The Command (APDL) objects coding system seems to be
+    1) derive A-M from prog-modes => branch derived
+    2) Travis CI continuous integration!
+    3) https://github.com/marketplace/coveralls
+    4) Start optionally runbWB2 --aim, Discovery AIM
+    5) Melpa README, better wait till emacs-27
+    6) The Command (APDL) objects coding system seems to be
        mule-utf-8-dos aka cp65001-dos, document this
-    4) derive A-M from prog-modes => branch derived
-    5) Travis CI continuous integration!
-    6) https://github.com/marketplace/coveralls
-    7) Start optionally runbWB2 --aim, Discovery AIM
-    8) Melpa README, better wait till emacs-27
-
 ** Done
 ** Push and Release Proceedures
-   - make PACK now obligatory for any push!
+   - make PACK : now obligatory for any push!
 
    - NEWS.org
-   - README.org News
+   - README.org News section
    - TODO.org
-   - make PACK!
 
    gca = git commit -a = gau + gc
    gta = git tag -a 20.6.0
    g push --tags
 
    Ansys updates:
-   Attention: in apdl_keywords.txt there are many
+   Hint: in apdl_keywords.txt there are many
    trailing whitespaces (delete-trailing-whitespace)
 
-   whitespace-mode
-   package-lint
+   whitespace-mode, package-lint
    checkdoc, flycheck etc. : from makefile?
 
     # for makefile
