Complete -wb-template menu entries

--- a/info/TODO.org
+++ b/info/TODO.org
@@ -87,6 +87,7 @@
    - NEWS.org
    - README.org News section
    - TODO.org
+   - Add new templates to the menu
 
    gca = git commit -a = gau + gc
    gta = git tag -a 20.6.0
