--- a/info/README.org
+++ b/info/README.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2020-04-07>
+#+DATE: Time-stamp: <2020-04-09>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
 #+OPTIONS: author:t c:t creator:t d:(not "LOGBOOK") date:t
@@ -71,6 +71,13 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    # #+caption: Browsing the manual in a web browser (here with EWW in GNU-Emacs).
    [[file:doc/browse_manual.png]]
 
+** Command Object Templates and Code Highlighting Example
+   You are able to compile your most often used WorkBench /
+   Discovery AIM Command snippets and have them all immediately
+   available in APDL-Mode for inspection and inclusion.
+
+   #+caption: GNU-Emacs with a ripped off APDL-Mode menu, the APDL variable buffer, the APDL file itself and an APDL template preview.
+   [[file:doc/ansys-mode.jpg]]
 ** Code outlining for inspecting WorkBench solver (.dat) files
    APDL-Mode hides the normally uninteresting but usually very large
    number blocks.
@@ -80,14 +87,6 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    The image below shows the unhidden content.
    #+ATTR_LaTeX: :height 7.5cm
    [[file:doc/unhidden_blocks.png]]
-** Command Snippet Templates and Code Highlighting Example
-   The image shows GNU-Emacs with a ripped off APDL-Mode menu field,
-   the APDL variable buffer, the APDL file itself and an APDL template
-   preview.  You are able to compile your most often used WorkBench /
-   Discovery AIM Command snippets and have them all immediately
-   available for inspection and inclusion.
-
-   [[file:doc/ansys-mode.jpg]]
 * Installation
   #+include: ./INSTALLATION.org
 
